--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -8,13 +8,15 @@
         android:id="@+id/book_img"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:src="@drawable/ai" />
 
     <TextView
         android:id="@+id/book_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:text="ai"
         android:textStyle="bold" />
 
 </LinearLayout>
