--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#073392</color>
-    <color name="colorPrimaryDark">#08338d</color>
-    <color name="colorAccent">#ff0000</color>
+    <color name="colorPrimary">#074A92</color>
     <color name="white">#ffffff</color>
 </resources>
