--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatImageView
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
         android:id="@+id/book_img"
-        android:layout_width="150dp"
+        android:layout_width="100dp"
         android:layout_height="150dp"
-        android:layout_gravity="center"
-        android:src="@drawable/ai" />
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:srcCompat="@drawable/ai" />
 
     <TextView
-        android:id="@+id/book_text"
-        android:layout_width="match_parent"
+        android:id="@+id/book_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:text="ai"
-        android:textSize="50px"
-        android:textStyle="bold" />
-
-</LinearLayout>
+        android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="@+id/book_img"
+        app:layout_constraintStart_toStartOf="@+id/book_img"
+        app:layout_constraintTop_toBottomOf="@+id/book_img" />
+</androidx.constraintlayout.widget.ConstraintLayout>
